# social-media-app

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.ts  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
db/orm/ast/: .env  Cargo.toml  schema.prisma  sql_db.sql  sql_db_migration.sql  sql_db_migration_tracker.sql  types.ts
db/orm/ast/src/: ident.pest  main.rs  parse_base_type.rs  parse_expression.rs  parse_field.rs  parse_field_type.rs  parse_model.rs
db/orm/ast/src/parse_schema/: mod.rs  parse_schema_base_type.rs  parse_schema_expression.rs  parse_schema_field_type.rs  parse_schema_fields.rs  parse_schema_model.rs
db/orm/ast/src/sql_schema/: mod.rs
db/orm/ast/src/sql_schema/parse_sql_schema/: mod.rs  parse_columns.rs  parse_schema.rs  parse_table_name.rs
db/orm/ast/src/sql_schema/query_sql_schema/: mod.rs  query_sql_columns.rs  query_sql_relations.rs  query_table_data.rs  query_table_names.rs
db/orm/ast/src/sql_schema/sql_migrations/: compare.rs  compare_column_changes.rs  compare_column_types.rs  create_sql_migration.rs  format_sql.rs  mod.rs  parse_schema_types.rs
db/orm/ast/src/tests/: mod.rs  schema.prisma  schema_1.prisma  schema_tests.rs
db/orm/db_compiler/: Cargo.toml
db/orm/db_compiler/src/: ident.pest  main.rs  schema.db
db/orm/db_compiler/src/db_parse/ast/: base_types.rs  mod.rs  sql_string.rs
db/orm/db_compiler/src/db_parse/parser/: mod.rs  parse_argument.rs  parse_arguments_list.rs  parse_base_type.rs  parse_column.rs  parse_function.rs  parse_model_declaration.rs  (+1 more)
(+216 files in other folders)
