[package]
name = "db_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path="./src/main.rs"

[dependencies]
wasm-bindgen = "0.2.74"
rule = "0.1.6"
pest = "2.5.7"
pest_derive = "2.5.7"